fix: cta button text visibility by defining css variables

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -1,3 +1,8 @@
+:root {
+  --accent: #42a5f5;
+  --border-color: #30363d;
+}
+
 body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
